--- a/PDO/Practica 1/practica-1-codigo/info/Practica1.html
+++ b/PDO/Practica 1/practica-1-codigo/info/Practica1.html
@@ -842,6 +842,8 @@ code {
 
 
 </div></code></pre>
+<h2 id="prueba-testp1">Prueba TestP1</h2>
+<p><img src="./info/pruebaTestP1.png" alt="pruebaTest"></p>
 
 </body>
 </html>
